--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write 'src/**/*.ts'",
+    "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine"
   },
   "author": "",
@@ -19,6 +20,7 @@
     "@types/jasmine": "^4.3.1",
     "@types/node": "^18.11.18",
     "@types/sharp": "^0.31.1",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "eslint": "^8.32.0",
